Fix video z-index on chrome mobile

--- a/app/views/video/video.sass
+++ b/app/views/video/video.sass
@@ -5,7 +5,7 @@
     transition: opacity 0.1s linear
 
 .video__sticky, .video__top-half
-    z-index: 3
+    z-index: 4
 
 .video__top-half
     background: black
@@ -26,6 +26,7 @@
 
 .video__line__translation
     position: relative
+    z-index: 3
     .btn
         border: 1px solid $lightgray
         background: none
